# permutohedral_lattice

./: .gitignore  BilateralKernel.cpp  BilateralKernel.cu  BilateralKernel.cu.cpp  BilateralKernel.h  CImg.h  CMakeLists.txt  CMakeTests  DeviceMemoryAllocator.h  LatticeFilterKernel.cpp  LatticeFilterKernel.cu  LatticeFilterKernel.h  MirroredArray.h  PermutohedralLattice.cpp  PermutohedralLattice.h  PermutohedralLatticeCPU.cpp  PermutohedralLatticeCPU.h  PermutohedralLatticeGPU.cu  PermutohedralLatticeGPU.cuh  README.md  asdf  bilateral_cpu.cpp  bilateral_gpu.cpp  bilateral_grad.py  build.sh  compare_and_gpu.cpp  crf_rnn_layer.py  cuda_code_indexing.h  cuda_memory.h  gradient_test.py  hash_table.cu  lattice_filter_op_loader.py  makefile  old.txt  op_test.py  permutohedral.cu  remote_build.sh  utils.h
CppTests/: PermutohedralLatticeGPU.cu  bilateral_filter_cpu.h  test_bilateral_cpu_test.cpp  test_compare_cpu_and_gpu.cpp
LatticeTests/: bilateral_filter_cpu.h  bilateral_gpu_test.cpp  compare_and_gpu_test.cpp  utils.h
OpTests/: 3d_test.py  bilateral_batch_test.py  crf_rnn_layer_test.py  crf_rnn_layer_test_2.py  gradient_test.py  greyscale_test.py  op_test.py
TFOpTests/: bilateral_filter.py  bilateral_filter_3d.py  greyscale_test.py
TFOpTests/TestNeedWork/: gradient.py
Test/: PermutohedralLatticeGPU.cu  bilateral_cpu_test.cpp  bilateral_filter_cpu.h  bilateral_filter_gpu.h  bilateral_gpu_test.cpp  compare_and_gpu_test.cpp  utils.h
TestNeedWork/: crf_rnn_layer_test.py  gradient_test.py
Tests/: PermutohedralLatticeGPU.cu  a_test.py  bilateral_filter.py  bilateral_filter_3d.py  bilateral_filter_cpu.h  bilateral_filter_gpu.h  gradient.py  greyscale_test.py  test_bilateral_gpu.cpp  utils.h
Tests/TestNeedWork/: gradient_test.py
src/: DeviceMemoryAllocator.h  LatticeFilterKernel.cpp  LatticeFilterKernel.cu  LatticeFilterKernel.h  PermutohedralLatticeCPU.h  PermutohedralLatticeGPU.cuh
